2006-09-29  David Kastrup  <dak@gnu.org>

	* doc/Makefile.in (AUCTEXDATE, AUCTEXVERSION): get from configure.
	(AUCTEXTEXIFILES): Add fdl.texi and version.texi
	(version.texi): create depending on Makefile.
	(maintainer-clean): Remove version.texi.  Should this be in the
	distclean target instead?

	* doc/fdl.texi: Add it.

	* Makefile.in (DOCFILES): Remove, unused.
	(doc/Makefile): Add target.
	(info, dvi, install-man, install-docs, clean, distclean)
	(tar-ball): depend on doc/Makefile

	* doc/.cvsignore: Add version.texi, remove unused auto.texi.

	* doc/auctex.texi: Rearrange header material, put under GFDL, add
	license, take version numbers from version.texi.

2006-09-21  David Kastrup  <dak@gnu.org>

	* RELEASE: Adapt to upcoming release.

	* doc/install.texi (Configure): Remove reference to
	`--with-kpathseasep' option.

	* tex-mik.el (TeX-kpathsea-path-delimiter): initialize to ";".

	* tex-fptex.el (TeX-kpathsea-path-delimiter): initialize to ";".

2006-09-20  David Kastrup  <dak@gnu.org>

	* tex-buf.el: Let `TeX-active-buffer' return nil if there is no
	command buffer.  Change copyright notice from Kresten Krab Thorup
	to reflect assignment to FSF.

	* latex.el: Change copyright notice.

	* tex.el: Change copyright notice.

	* doc/tex-ref.tex: Change copyright notice.

	* doc/auctex.texi: Change copyright notice.

2006-09-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* doc/faq.texi: Fix syntax error.

2006-09-16  Ralf Angeli  <angeli@caeruleus.net>

	* doc/faq.texi: Explain the abbreviation AUC.

2006-09-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* toolbar-x.el (toolbarx-emacs-refresh): Don't modify global value
	of `tool-bar-map'.

2006-09-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* latex.el (LaTeX-math-default): Remove X2ABB for \Pr.  Suggested
	by Adam Johnson <thu_zh@hotmail.com>.

2006-09-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* latex.el: Use read-kbd-macro instead of kbd for LaTeX-math-mode.
	(LaTeX-math-default): Add bindings for \var... symbols.